--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -78,9 +78,9 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace "com.googlemaprn"
+    namespace "com.techhub.findplaces"
     defaultConfig {
-        applicationId "com.googlemaprn"
+        applicationId "com.techhub.findplaces"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
