--- a/ios/GoogleMapRN/Info.plist
+++ b/ios/GoogleMapRN/Info.plist
@@ -36,7 +36,12 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>We need your location to show your nearby health places and activities.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We need your location to show your nearby health places and activities.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need your location to show your nearby health places and activities.</string>
+	
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
