--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "expo": "^49.0.0",
+    "expo-location": "~16.1.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-maps": "1.7.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0"
   },
